# meal-prep

./: .claude.md  MealPlanner_DB_Template.xlsx  PLANNING.md  README.md  index.html  plan.json  shopping_list.json
.github/workflows/: build_and_deploy.yml  build_frontend.yml  deploy.yml  generate_plan.yml  validate_recipes.yml
assets/: index-BHdIoDkE.css  index-BaxtKI86.js  index-BqU2a2cj.css  index-DmWejiJC.js
data/: README.md  ingredients.yml  pantry.yml  rules.yml
data/recipes/: arroz_con_pollo.yml  arroz_salteado_cerdo.yml  atun_guisito_dinner.yml  atun_juanfe.yml  atun_juanfe_dinner.yml  atun_juanfe_lunch.yml  bistec_a_caballo.yml  brocoli_con_carne.yml  carne_encebollada_lunch.yml  chicken_fricassee.yml  chicken_fricassee_dinner.yml  chicken_fricassee_lunch.yml  ensalada_pollo_manzana.yml  higado_encebollado.yml  lentejas.yml  pasta_tefy.yml  pescado_encocado.yml  pollo_asiatico.yml  pollo_asiatico_dinner.yml  pollo_asiatico_lunch.yml  pollo_guiso_habichuelas_dinner.yml  pollo_toscano_lunch.yml  salmon_horneado.yml  salmon_horneado_dinner.yml  salmon_horneado_lunch.yml  sudado_carne.yml
planner/: pyproject.toml
planner/mealplanner/: __init__.py  cli.py  config.py  load.py  model.py  render.py  shopping.py  solve.py  variants.py
planner/tests/: test_recipe_validation.py
public/: plan.json  shopping_list.json
site/: index.html  package-lock.json  package.json  vite.config.js
site/public/: plan.json  shopping_list.json
site/src/: App.jsx
site/src/components/: MealCard.jsx  RecipeModal.jsx  ShoppingList.jsx
